samples/_failures_safe/1761697152_cfe428_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42f85387.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_42f85387.c:145:13: error: expected declaration or statement at end of input
  145 |             if (graph->edges[i].src == u) {
      |             ^~
./samples/SAFE/__tmp_42f85387.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42f85387.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_42f85387.c:145:13: error: expected declaration or statement at end of input
